docs: add and update Javadocs and inline comments across the project files